--- a/app/globals.css
+++ b/app/globals.css
@@ -8,20 +8,161 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.container {
+  width: 100%;
+  padding: 5px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.bannerImage {
+  width: 100%;
+  max-height: 600px;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.bannerTextContainer {
+  width: 500px;
+  z-index: 5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 200px;
+  margin-left: 75px;
+  padding: 5px 10px;
+}
+
+.bannerText {
+  font-weight: 600;
+  color: #000000;
+  font-size: 16px;
+}
+
+.bannerText2 {
+  font-size: 30px;
+  font-weight: 700;
+  color: #000000;
+}
+
+.feesCard {
+  position: absolute;
+  background-color: #FFF3DA;
+  width: fit-content;
+  padding: 20px 15px 20px 15px;
+  margin-left: auto;
+  right: 0;
+  margin-right: 72px;
+  top: 0;
+  margin-top: 350px;
+  border-radius: 25px;
+}
+
+.registerBtnContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.registerBtn {
+  background-color: #610C9F;
+  display: flex;
+  justify-content: center;
+  padding: 5px 10px;
+  border-radius: 50px;
+  width: 95%;
+}
+
+.registerBtnText {
+  padding: 2.5px 0px 2.5px 0px;
+  color: #FFFFFF;
+  font-weight: 700;
+}
+
+.cardHeadingContainer {
+  margin-top: 8px;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-left: 10%;
+  /* border-width: 2px;
+  border-color: #000000; */
+}
+
+.detailsContainer {
+  width: 50%;
+  margin-top: 28px;
+  margin-left: 10%;
+  /* border-width: 2px;
+  border-color: #000000; */
+}
+
+.footerContainer {
+  /* border-width: 2px;
+  border-color: #000000; */
+  display: flex;
+  /* flex-direction: row-reverse; */
+  width: 80%;
+  margin-left: auto;
+  margin-right: 10%;
+  margin-top: 64px;
+  padding: 10px 10px;
+}
+
+.socialContainer {
+  margin-top: 32px;
+  /* border-width: 2px;
+  border-color: #000000; */
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  margin-left: auto;
+  justify-content: space-around;
+  padding: 10px 10px;
+}
+
+.instaIcon {
+  background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);
+  border-radius: 8px;
+  }
+
+.quotesContainer {
+  /* border-width: 2px;
+  border-color: #000000; */
+  width: 80%;
+  margin: 64px auto;
+}
+
+.quotesBox {
+  background-color: #F0F0F0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 60px 20px 20px 20px;
+}
+
+.buttonCircle {
+  background-color: #D0D4CA;
+  height: fit-content;
+  width: fit-content;
+  margin: auto auto;
+  padding: 3px;
+  border-radius: 50px;
+}
+
+.reviewBox {
+  margin: auto 0px;
+}
+
+.reviewer_pfp {
+  border-radius: 100%;
+  margin-right: 12px;
+}
+
+.moreReview {
+  margin: 0px auto;
+  /* border-width: 2px;
+  border-color: #000000; */
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
